2003-02-10  Christian Stimming  <stimming@tuhh.de>
	* src/import-export/hbci/glade/hbci.glade, po/de.po: Clarify some
	HBCI strings.

	* configure.in: require newer openhbci: 0.9.6, from Jan 31.


git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@7970 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/src/import-export/hbci/glade/hbci.glade
+++ b/src/import-export/hbci/glade/hbci.glade
@@ -20,7 +20,7 @@
   <class>GtkWindow</class>
   <name>HBCI Init Druid</name>
   <width>540</width>
-  <height>370</height>
+  <height>380</height>
   <title>Initial HBCI Setup</title>
   <type>GTK_WINDOW_TOPLEVEL</type>
   <position>GTK_WIN_POS_MOUSE</position>
@@ -523,7 +523,7 @@ HBCI connection now.</text>
 	    <class>GtkTable</class>
 	    <name>table3</name>
 	    <border_width>10</border_width>
-	    <rows>4</rows>
+	    <rows>5</rows>
 	    <columns>4</columns>
 	    <homogeneous>False</homogeneous>
 	    <row_spacing>5</row_spacing>
@@ -532,7 +532,7 @@ HBCI connection now.</text>
 	    <widget>
 	      <class>GtkLabel</class>
 	      <name>label8477402</name>
-	      <label>User ID</label>
+	      <label>User ID (&quot;Benutzerkennung&quot;)</label>
 	      <justify>GTK_JUSTIFY_RIGHT</justify>
 	      <wrap>False</wrap>
 	      <xalign>0</xalign>
@@ -543,8 +543,8 @@ HBCI connection now.</text>
 	      <child>
 		<left_attach>0</left_attach>
 		<right_attach>1</right_attach>
-		<top_attach>0</top_attach>
-		<bottom_attach>1</bottom_attach>
+		<top_attach>1</top_attach>
+		<bottom_attach>2</bottom_attach>
 		<xpad>0</xpad>
 		<ypad>0</ypad>
 		<xexpand>False</xexpand>
@@ -567,8 +567,8 @@ HBCI connection now.</text>
 	      <child>
 		<left_attach>1</left_attach>
 		<right_attach>2</right_attach>
-		<top_attach>0</top_attach>
-		<bottom_attach>1</bottom_attach>
+		<top_attach>1</top_attach>
+		<bottom_attach>2</bottom_attach>
 		<xpad>0</xpad>
 		<ypad>0</ypad>
 		<xexpand>True</xexpand>
@@ -594,8 +594,8 @@ HBCI connection now.</text>
 	      <child>
 		<left_attach>2</left_attach>
 		<right_attach>3</right_attach>
-		<top_attach>0</top_attach>
-		<bottom_attach>1</bottom_attach>
+		<top_attach>1</top_attach>
+		<bottom_attach>2</bottom_attach>
 		<xpad>0</xpad>
 		<ypad>0</ypad>
 		<xexpand>False</xexpand>
@@ -618,8 +618,8 @@ HBCI connection now.</text>
 	      <child>
 		<left_attach>3</left_attach>
 		<right_attach>4</right_attach>
-		<top_attach>0</top_attach>
-		<bottom_attach>1</bottom_attach>
+		<top_attach>1</top_attach>
+		<bottom_attach>2</bottom_attach>
 		<xpad>0</xpad>
 		<ypad>0</ypad>
 		<xexpand>True</xexpand>
@@ -634,7 +634,7 @@ HBCI connection now.</text>
 	    <widget>
 	      <class>GtkLabel</class>
 	      <name>label8477410</name>
-	      <label>Customer ID</label>
+	      <label>Customer ID (&quot;Kundennummer&quot;)</label>
 	      <justify>GTK_JUSTIFY_RIGHT</justify>
 	      <wrap>False</wrap>
 	      <xalign>0</xalign>
@@ -645,8 +645,8 @@ HBCI connection now.</text>
 	      <child>
 		<left_attach>0</left_attach>
 		<right_attach>1</right_attach>
-		<top_attach>2</top_attach>
-		<bottom_attach>3</bottom_attach>
+		<top_attach>3</top_attach>
+		<bottom_attach>4</bottom_attach>
 		<xpad>0</xpad>
 		<ypad>0</ypad>
 		<xexpand>False</xexpand>
@@ -672,8 +672,8 @@ HBCI connection now.</text>
 	      <child>
 		<left_attach>2</left_attach>
 		<right_attach>3</right_attach>
-		<top_attach>2</top_attach>
-		<bottom_attach>3</bottom_attach>
+		<top_attach>3</top_attach>
+		<bottom_attach>4</bottom_attach>
 		<xpad>0</xpad>
 		<ypad>0</ypad>
 		<xexpand>False</xexpand>
@@ -691,8 +691,8 @@ HBCI connection now.</text>
 	      <child>
 		<left_attach>0</left_attach>
 		<right_attach>4</right_attach>
-		<top_attach>1</top_attach>
-		<bottom_attach>2</bottom_attach>
+		<top_attach>2</top_attach>
+		<bottom_attach>3</bottom_attach>
 		<xpad>0</xpad>
 		<ypad>0</ypad>
 		<xexpand>False</xexpand>
@@ -715,8 +715,8 @@ HBCI connection now.</text>
 	      <child>
 		<left_attach>1</left_attach>
 		<right_attach>2</right_attach>
-		<top_attach>2</top_attach>
-		<bottom_attach>3</bottom_attach>
+		<top_attach>3</top_attach>
+		<bottom_attach>4</bottom_attach>
 		<xpad>0</xpad>
 		<ypad>0</ypad>
 		<xexpand>True</xexpand>
@@ -739,8 +739,8 @@ HBCI connection now.</text>
 	      <child>
 		<left_attach>3</left_attach>
 		<right_attach>4</right_attach>
-		<top_attach>2</top_attach>
-		<bottom_attach>3</bottom_attach>
+		<top_attach>3</top_attach>
+		<bottom_attach>4</bottom_attach>
 		<xpad>0</xpad>
 		<ypad>0</ypad>
 		<xexpand>True</xexpand>
@@ -755,7 +755,7 @@ HBCI connection now.</text>
 	    <widget>
 	      <class>GtkLabel</class>
 	      <name>label8877438</name>
-	      <label>If your bank did not specify a Customer ID, simply enter the User ID here.</label>
+	      <label>If your bank did not specify a Customer ID, enter the User ID here.</label>
 	      <justify>GTK_JUSTIFY_LEFT</justify>
 	      <wrap>False</wrap>
 	      <xalign>0</xalign>
@@ -766,8 +766,34 @@ HBCI connection now.</text>
 	      <child>
 		<left_attach>0</left_attach>
 		<right_attach>4</right_attach>
-		<top_attach>3</top_attach>
-		<bottom_attach>4</bottom_attach>
+		<top_attach>4</top_attach>
+		<bottom_attach>5</bottom_attach>
+		<xpad>0</xpad>
+		<ypad>0</ypad>
+		<xexpand>False</xexpand>
+		<yexpand>False</yexpand>
+		<xshrink>False</xshrink>
+		<yshrink>False</yshrink>
+		<xfill>True</xfill>
+		<yfill>False</yfill>
+	      </child>
+	    </widget>
+
+	    <widget>
+	      <class>GtkLabel</class>
+	      <name>label8877440</name>
+	      <label>Enter the IDs given from your bank here. Please make sure the spelling is correct. </label>
+	      <justify>GTK_JUSTIFY_CENTER</justify>
+	      <wrap>False</wrap>
+	      <xalign>0</xalign>
+	      <yalign>0.5</yalign>
+	      <xpad>0</xpad>
+	      <ypad>0</ypad>
+	      <child>
+		<left_attach>0</left_attach>
+		<right_attach>4</right_attach>
+		<top_attach>0</top_attach>
+		<bottom_attach>1</bottom_attach>
 		<xpad>0</xpad>
 		<ypad>0</ypad>
 		<xexpand>False</xexpand>
