--- a/src/import-export/hbci/glade/hbci.glade
+++ b/src/import-export/hbci/glade/hbci.glade
@@ -105,38 +105,17 @@ HBCI connection now.</text>
 	  </child>
 
 	  <widget>
-	    <class>GtkHBox</class>
-	    <name>hbox108</name>
-	    <border_width>10</border_width>
+	    <class>GtkVBox</class>
+	    <name>vbox156</name>
 	    <homogeneous>False</homogeneous>
-	    <spacing>5</spacing>
+	    <spacing>0</spacing>
 
 	    <widget>
-	      <class>GtkLabel</class>
-	      <name>label8477402</name>
-	      <label>Configuration File</label>
-	      <justify>GTK_JUSTIFY_CENTER</justify>
-	      <wrap>False</wrap>
-	      <xalign>0.5</xalign>
-	      <yalign>0.5</yalign>
-	      <xpad>0</xpad>
-	      <ypad>0</ypad>
-	      <focus_target>configfile-entry</focus_target>
-	      <child>
-		<padding>0</padding>
-		<expand>False</expand>
-		<fill>False</fill>
-	      </child>
-	    </widget>
-
-	    <widget>
-	      <class>GnomeFileEntry</class>
-	      <name>configfile_fileentry</name>
-	      <history_id>openhbci_configfile</history_id>
-	      <max_saved>10</max_saved>
-	      <title>Choose OpenHBCI Configuration File</title>
-	      <directory>False</directory>
-	      <modal>False</modal>
+	      <class>GtkHBox</class>
+	      <name>hbox108</name>
+	      <border_width>5</border_width>
+	      <homogeneous>False</homogeneous>
+	      <spacing>5</spacing>
 	      <child>
 		<padding>0</padding>
 		<expand>True</expand>
@@ -144,15 +123,70 @@ HBCI connection now.</text>
 	      </child>
 
 	      <widget>
-		<class>GtkEntry</class>
-		<child_name>GnomeEntry:entry</child_name>
-		<name>configfile-entry</name>
-		<can_focus>True</can_focus>
-		<editable>True</editable>
-		<text_visible>True</text_visible>
-		<text_max_length>0</text_max_length>
-		<text></text>
+		<class>GtkLabel</class>
+		<name>label8477402</name>
+		<label>Configuration File</label>
+		<justify>GTK_JUSTIFY_CENTER</justify>
+		<wrap>False</wrap>
+		<xalign>0.5</xalign>
+		<yalign>0.5</yalign>
+		<xpad>5</xpad>
+		<ypad>0</ypad>
+		<focus_target>configfile-entry</focus_target>
+		<child>
+		  <padding>0</padding>
+		  <expand>False</expand>
+		  <fill>False</fill>
+		</child>
 	      </widget>
+
+	      <widget>
+		<class>GnomeFileEntry</class>
+		<name>configfile_fileentry</name>
+		<history_id>openhbci_configfile</history_id>
+		<max_saved>10</max_saved>
+		<title>Choose OpenHBCI Configuration File</title>
+		<directory>False</directory>
+		<modal>False</modal>
+		<child>
+		  <padding>0</padding>
+		  <expand>True</expand>
+		  <fill>True</fill>
+		</child>
+
+		<widget>
+		  <class>GtkEntry</class>
+		  <child_name>GnomeEntry:entry</child_name>
+		  <name>configfile-entry</name>
+		  <can_focus>True</can_focus>
+		  <editable>True</editable>
+		  <text_visible>True</text_visible>
+		  <text_max_length>0</text_max_length>
+		  <text></text>
+		</widget>
+	      </widget>
+	    </widget>
+
+	    <widget>
+	      <class>GtkLabel</class>
+	      <name>label8877441</name>
+	      <label>If you already have an OpenHBCI configuration file (e.g. from 'aqmoney'), 
+please select it here. GnuCash will continue to use your existing configuration.
+
+If you do not yet have an OpenHBCI configuration file, please specify a file name here. 
+A new OpenHBCI configuration file with that name will be created when this HBCI 
+Setup finishes.</label>
+	      <justify>GTK_JUSTIFY_LEFT</justify>
+	      <wrap>False</wrap>
+	      <xalign>0</xalign>
+	      <yalign>0.5</yalign>
+	      <xpad>10</xpad>
+	      <ypad>0</ypad>
+	      <child>
+		<padding>0</padding>
+		<expand>False</expand>
+		<fill>False</fill>
+	      </child>
 	    </widget>
 	  </widget>
 	</widget>
