2003-05-02  Christian Stimming  <stimming@tuhh.de>
	* configure.in: Add pkg-config test for libgnomeui-2.0.

	* src/import-export/hbci/*.c: Port hbci import module to Gnome2,
	sourcecode compiles now. Copy changes from HEAD branch.


git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/gnucash-gnome2-dev@8265 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/src/import-export/hbci/glade/hbci.glade
+++ b/src/import-export/hbci/glade/hbci.glade
@@ -2614,7 +2614,7 @@ Press 'Finish' now.</text>
 	  <vupdate_policy>GTK_UPDATE_CONTINUOUS</vupdate_policy>
 
 	  <widget>
-	    <class>GtkText</class>
+	    <class>GtkTextView</class>
 	    <name>log_text</name>
 	    <can_focus>True</can_focus>
 	    <editable>False</editable>
