Jan Arne Petersen's gnome2 patch #7.  See the ChangeLog for more info.
git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/gnucash-gnome2-dev@8341 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/src/gnome/glade/commodities.glade
+++ b/src/gnome/glade/commodities.glade
@@ -31,6 +31,7 @@
                 <property name="label">gtk-close</property>
                 <property name="use_stock">yes</property>
                 <property name="use_underline">yes</property>
+                <property name="response">GTK_RESPONSE_OK</property>
               </widget>
             </child>
           </widget>
