--- a/src/gnome/glade/account.glade
+++ b/src/gnome/glade/account.glade
@@ -442,13 +442,10 @@
 			  <property name="window_placement">GTK_CORNER_TOP_LEFT</property>
 
 			  <child>
-			    <widget class="GtkTreeView" id="type_list">
+			    <widget class="GtkCList" id="type_list">
 			      <property name="visible">True</property>
 			      <property name="can_focus">True</property>
-			      <property name="headers_visible">True</property>
-			      <property name="rules_hint">False</property>
 			      <property name="reorderable">False</property>
-			      <property name="enable_search">True</property>
 			    </widget>
 			  </child>
 			</widget>
@@ -491,13 +488,19 @@
 			<widget class="GtkScrolledWindow" id="parent_scroll">
 			  <property name="border_width">3</property>
 			  <property name="visible">True</property>
-			  <property name="hscrollbar_policy">GTK_POLICY_NEVER</property>
-			  <property name="vscrollbar_policy">GTK_POLICY_ALWAYS</property>
+			  <property name="hscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
+			  <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
 			  <property name="shadow_type">GTK_SHADOW_NONE</property>
 			  <property name="window_placement">GTK_CORNER_TOP_LEFT</property>
 
 			  <child>
-			    <placeholder/>
+			    <widget class="GtkTreeView" id="parent_tree_view">
+			      <property name="visible">True</property>
+			      <property name="can_focus">True</property>
+			      <property name="reorderable">False</property>
+			      <property name="enable-search">False</property>
+			      <property name="headers-visible">False</property>
+			    </widget>
 			  </child>
 			</widget>
 		      </child>
@@ -983,7 +986,10 @@
 			      <property name="spacing">0</property>
 
 			      <child>
-				<placeholder/>
+				<widget class="GnomeDateEdit" id="opening_balance_date_edit">
+                                   <property name="visible">True</property>
+				   <property name="dateedit-flags"></property>
+				</widget>
 			      </child>
 			    </widget>
 			    <packing>
@@ -1224,11 +1230,6 @@ expenses you might have.
 
 Click 'Cancel'  if you do not wish to create any 
 new accounts now.</property>
-	  <property name="title_color">#ffffffffffff</property>
-	  <property name="text_color">#000000000000</property>
-	  <property name="background_color">#191919197070</property>
-	  <property name="logo_background_color">#ffffffffffff</property>
-	  <property name="textbox_color">#ffffffffffff</property>
 	</widget>
       </child>
 
@@ -1236,9 +1237,6 @@ new accounts now.</property>
 	<widget class="GnomeDruidPageStandard" id="currency_choose_page">
 	  <property name="visible">True</property>
 	  <property name="title" translatable="yes">Choose Currency</property>
-	  <property name="title_foreground">#8aa0081e5b2b</property>
-	  <property name="background">#8aa0081ec918</property>
-	  <property name="logo_background">#888c407fc908</property>
 	  <signal name="prepare" handler="on_choose_currency_prepare"/>
 
 	  <child internal-child="vbox">
@@ -1294,9 +1292,6 @@ new accounts now.</property>
 	<widget class="GnomeDruidPageStandard" id="choose_account_types_page">
 	  <property name="visible">True</property>
 	  <property name="title" translatable="yes">Choose accounts to create</property>
-	  <property name="title_foreground">#8aa0081e5b2b</property>
-	  <property name="background">#8aa0081ec918</property>
-	  <property name="logo_background">#888c407fc908</property>
 	  <signal name="prepare" handler="on_choose_account_types_prepare"/>
 
 	  <child internal-child="vbox">
@@ -1346,21 +1341,18 @@ additional accounts by hand later.</property>
 		      <child>
 			<widget class="GtkScrolledWindow" id="scrolledwindow1">
 			  <property name="visible">True</property>
-			  <property name="hscrollbar_policy">GTK_POLICY_ALWAYS</property>
-			  <property name="vscrollbar_policy">GTK_POLICY_ALWAYS</property>
+			  <property name="hscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
+			  <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
 			  <property name="shadow_type">GTK_SHADOW_IN</property>
 			  <property name="window_placement">GTK_CORNER_TOP_LEFT</property>
 
 			  <child>
-			    <widget class="GtkTreeView" id="account_types_clist">
+			    <widget class="GtkTreeView" id="account_types_tree_view">
 			      <property name="visible">True</property>
 			      <property name="can_focus">True</property>
-			      <property name="headers_visible">True</property>
-			      <property name="rules_hint">False</property>
 			      <property name="reorderable">False</property>
-			      <property name="enable_search">True</property>
-			      <signal name="select_row" handler="on_account_types_list_select_row"/>
-			      <signal name="unselect_row" handler="on_account_types_list_unselect_row"/>
+			      <property name="enable-search">False</property>
+			      <property name="headers-visible">True</property>
 			    </widget>
 			  </child>
 			</widget>
@@ -1443,14 +1435,14 @@ additional accounts by hand later.</property>
 			<widget class="GtkScrolledWindow" id="scrolledwindow2">
 			  <property name="visible">True</property>
 			  <property name="hscrollbar_policy">GTK_POLICY_NEVER</property>
-			  <property name="vscrollbar_policy">GTK_POLICY_ALWAYS</property>
-			  <property name="shadow_type">GTK_SHADOW_NONE</property>
+			  <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
+			  <property name="shadow_type">GTK_SHADOW_IN</property>
 			  <property name="window_placement">GTK_CORNER_TOP_LEFT</property>
 
 			  <child>
-			    <widget class="GtkViewport" id="viewport2">
+			    <widget class="GtkViewport" id="viewport1">
 			      <property name="visible">True</property>
-			      <property name="shadow_type">GTK_SHADOW_IN</property>
+			      <property name="shadow_type">GTK_SHADOW_NONE</property>
 
 			      <child>
 				<widget class="GtkLabel" id="account_types_description_entry">
@@ -1509,24 +1501,17 @@ additional accounts by hand later.</property>
 			<widget class="GtkScrolledWindow" id="scrolledwindow3">
 			  <property name="visible">True</property>
 			  <property name="hscrollbar_policy">GTK_POLICY_NEVER</property>
-			  <property name="vscrollbar_policy">GTK_POLICY_ALWAYS</property>
-			  <property name="shadow_type">GTK_SHADOW_NONE</property>
+			  <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
+			  <property name="shadow_type">GTK_SHADOW_IN</property>
 			  <property name="window_placement">GTK_CORNER_TOP_LEFT</property>
 
 			  <child>
-			    <widget class="GtkViewport" id="viewport1">
+			    <widget class="GtkTreeView" id="account_type_tree">
 			      <property name="visible">True</property>
-			      <property name="shadow_type">GTK_SHADOW_IN</property>
-
-			      <child>
-				<widget class="GtkTreeView" id="account_type_tree">
-				  <property name="visible">True</property>
-				  <property name="headers_visible">True</property>
-				  <property name="rules_hint">False</property>
-				  <property name="reorderable">False</property>
-				  <property name="enable_search">True</property>
-				</widget>
-			      </child>
+			      <property name="rules_hint">False</property>
+			      <property name="reorderable">False</property>
+			      <property name="enable_search">False</property>
+			      <property name="headers_visible">False</property>
 			    </widget>
 			  </child>
 			</widget>
@@ -1573,9 +1558,6 @@ additional accounts by hand later.</property>
 	<widget class="GnomeDruidPageStandard" id="final_account_page">
 	  <property name="visible">True</property>
 	  <property name="title" translatable="yes">Enter opening balances</property>
-	  <property name="title_foreground">#8aa0081e5b2b</property>
-	  <property name="background">#8aa0081ec918</property>
-	  <property name="logo_background">#888c407fc908</property>
 	  <signal name="prepare" handler="on_final_account_prepare"/>
 	  <signal name="next" handler="on_final_account_next"/>
 
@@ -1619,20 +1601,18 @@ and placeholder accounts may have an opening balance.</property>
 		    <widget class="GtkScrolledWindow" id="scrolledwindow4">
 		      <property name="visible">True</property>
 		      <property name="hscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
-		      <property name="vscrollbar_policy">GTK_POLICY_ALWAYS</property>
+		      <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
 		      <property name="shadow_type">GTK_SHADOW_IN</property>
 		      <property name="window_placement">GTK_CORNER_TOP_LEFT</property>
 
 		      <child>
-			<widget class="GtkTreeView" id="final_account_ctree">
+			<widget class="GtkTreeView" id="final_account_tree_view">
 			  <property name="visible">True</property>
 			  <property name="can_focus">True</property>
-			  <property name="headers_visible">True</property>
-			  <property name="rules_hint">False</property>
 			  <property name="reorderable">False</property>
-			  <property name="enable_search">True</property>
-			  <signal name="tree_select_row" handler="on_final_account_tree_select_row"/>
-			  <signal name="tree_unselect_row" handler="on_final_account_tree_unselect_row"/>
+			  <property name="enable-search">False</property>
+			  <property name="headers-visible">True</property>
+			  <property name="rules_hint">True</property>
 			</widget>
 		      </child>
 		    </widget>
@@ -1648,26 +1628,6 @@ and placeholder accounts may have an opening balance.</property>
 		      <property name="visible">True</property>
 		      <property name="homogeneous">False</property>
 		      <property name="spacing">0</property>
-
-		      <child>
-			<widget class="GtkCheckButton" id="placeholder">
-			  <property name="border_width">2</property>
-			  <property name="visible">True</property>
-			  <property name="can_focus">True</property>
-			  <property name="label" translatable="yes">Placeholder</property>
-			  <property name="use_underline">True</property>
-			  <property name="relief">GTK_RELIEF_NORMAL</property>
-			  <property name="active">False</property>
-			  <property name="inconsistent">False</property>
-			  <property name="draw_indicator">True</property>
-			  <signal name="toggled" handler="on_final_account_tree_placeholder_toggled"/>
-			</widget>
-			<packing>
-			  <property name="padding">0</property>
-			  <property name="expand">False</property>
-			  <property name="fill">False</property>
-			</packing>
-		      </child>
 
 		      <child>
 			<widget class="GtkFrame" id="frame3">
@@ -1747,11 +1707,6 @@ and placeholder accounts may have an opening balance.</property>
 Press `Back' to review your selections.
 
 Press `Cancel' to close this dialog without creating any new accounts.</property>
-	  <property name="title_color">#ffffffffffff</property>
-	  <property name="text_color">#000000000000</property>
-	  <property name="background_color">#191919197070</property>
-	  <property name="logo_background_color">#ffffffffffff</property>
-	  <property name="textbox_color">#ffffffffffff</property>
 	  <signal name="finish" handler="on_finish"/>
 	</widget>
       </child>
@@ -1836,13 +1791,10 @@ Press `Cancel' to close this dialog without creating any new accounts.</property
 		  <property name="window_placement">GTK_CORNER_TOP_LEFT</property>
 
 		  <child>
-		    <widget class="GtkTreeView" id="account_tree">
+		    <widget class="GtkCTree" id="account_tree">
 		      <property name="visible">True</property>
 		      <property name="can_focus">True</property>
-		      <property name="headers_visible">True</property>
-		      <property name="rules_hint">False</property>
 		      <property name="reorderable">False</property>
-		      <property name="enable_search">True</property>
 		    </widget>
 		  </child>
 		</widget>
