Yet another Jan Petersen patch:
Changes:
 * Requires gtk+-2.0 >= 2.2 and libgnomeui-2.0 >= 2.2
 * Fix dialog-price-editor.


git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/gnucash-gnome2-dev@8410 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/src/gnome/glade/price.glade
+++ b/src/gnome/glade/price.glade
@@ -347,6 +347,18 @@
             <property name="visible">yes</property>
 
             <child>
+              <widget class="GtkButton" id="cancel_button">
+                <property name="can_default">yes</property>
+                <property name="can_focus">yes</property>
+                <property name="visible">yes</property>
+                <property name="label">gtk-cancel</property>
+                <property name="use_stock">yes</property>
+                <property name="use_underline">yes</property>
+		<property name="response_id">-6</property>
+              </widget>
+            </child>
+
+            <child>
               <widget class="GtkButton" id="ok_button">
                 <property name="can_default">yes</property>
                 <property name="has_default">yes</property>
@@ -355,17 +367,7 @@
                 <property name="label">gtk-ok</property>
                 <property name="use_stock">yes</property>
                 <property name="use_underline">yes</property>
-              </widget>
-            </child>
-
-            <child>
-              <widget class="GtkButton" id="cancel_button">
-                <property name="can_default">yes</property>
-                <property name="can_focus">yes</property>
-                <property name="visible">yes</property>
-                <property name="label">gtk-cancel</property>
-                <property name="use_stock">yes</property>
-                <property name="use_underline">yes</property>
+		<property name="response_id">-5</property>
               </widget>
             </child>
           </widget>
