--- a/src/gnome-utils/commodity.glade
+++ b/src/gnome-utils/commodity.glade
@@ -19,6 +19,7 @@
 <widget>
   <class>GnomeDialog</class>
   <name>Commodity Selector Dialog</name>
+  <visible>False</visible>
   <title>Select currency/security </title>
   <type>GTK_WINDOW_TOPLEVEL</type>
   <position>GTK_WIN_POS_NONE</position>
@@ -74,7 +75,7 @@
 
       <widget>
 	<class>GtkButton</class>
-	<name>button64</name>
+	<name>new_button</name>
 	<can_default>True</can_default>
 	<can_focus>True</can_focus>
 	<signal>
