--- a/src/gnome-utils/commodity.glade
+++ b/src/gnome-utils/commodity.glade
@@ -341,7 +341,7 @@
 	  <property name="layout_style">GTK_BUTTONBOX_END</property>
 
 	  <child>
-	    <widget class="GtkButton" id="button66">
+	    <widget class="GtkButton" id="cancel_button">
 	      <property name="visible">True</property>
 	      <property name="can_default">True</property>
 	      <property name="has_default">True</property>
@@ -350,12 +350,12 @@
 	      <property name="use_stock">True</property>
 	      <property name="relief">GTK_RELIEF_NORMAL</property>
 	      <property name="response_id">-6</property>
-	      <signal name="clicked" handler="gnc_ui_commodity_ok_cb"/>
+	      <signal name="clicked" handler="gnc_ui_commodity_cancel_cb" last_modification_time="Sun, 06 Jul 2003 00:31:05 GMT"/>
 	    </widget>
 	  </child>
 
 	  <child>
-	    <widget class="GtkButton" id="button67">
+	    <widget class="GtkButton" id="ok_button">
 	      <property name="visible">True</property>
 	      <property name="can_default">True</property>
 	      <property name="can_focus">True</property>
@@ -363,7 +363,7 @@
 	      <property name="use_stock">True</property>
 	      <property name="relief">GTK_RELIEF_NORMAL</property>
 	      <property name="response_id">-5</property>
-	      <signal name="clicked" handler="gnc_ui_commodity_cancel_cb"/>
+	      <signal name="clicked" handler="gnc_ui_commodity_ok_cb" last_modification_time="Sun, 06 Jul 2003 00:31:29 GMT"/>
 	    </widget>
 	  </child>
 
