--- a/src/gnome/glade/account.glade
+++ b/src/gnome/glade/account.glade
@@ -445,7 +445,27 @@
 			    <widget class="GtkCList" id="type_list">
 			      <property name="visible">True</property>
 			      <property name="can_focus">True</property>
-			      <property name="reorderable">False</property>
+			      <property name="n_columns">1</property>
+			      <property name="column_widths">80</property>
+			      <property name="selection_mode">GTK_SELECTION_SINGLE</property>
+			      <property name="show_titles">False</property>
+			      <property name="shadow_type">GTK_SHADOW_IN</property>
+
+			      <child>
+				<widget class="GtkLabel" id="label8477401">
+				  <property name="visible">True</property>
+				  <property name="label" translatable="yes"></property>
+				  <property name="use_underline">False</property>
+				  <property name="use_markup">False</property>
+				  <property name="justify">GTK_JUSTIFY_LEFT</property>
+				  <property name="wrap">False</property>
+				  <property name="selectable">False</property>
+				  <property name="xalign">0.5</property>
+				  <property name="yalign">0.5</property>
+				  <property name="xpad">0</property>
+				  <property name="ypad">0</property>
+				</widget>
+			      </child>
 			    </widget>
 			  </child>
 			</widget>
@@ -497,9 +517,10 @@
 			    <widget class="GtkTreeView" id="parent_tree_view">
 			      <property name="visible">True</property>
 			      <property name="can_focus">True</property>
+			      <property name="headers_visible">True</property>
+			      <property name="rules_hint">False</property>
 			      <property name="reorderable">False</property>
-			      <property name="enable-search">False</property>
-			      <property name="headers-visible">False</property>
+			      <property name="enable_search">True</property>
 			    </widget>
 			  </child>
 			</widget>
@@ -988,8 +1009,15 @@
 			      <child>
 				<widget class="GnomeDateEdit" id="opening_balance_date_edit">
                                    <property name="visible">True</property>
-				   <property name="dateedit-flags"></property>
+				  <property name="dateedit_flags">GNOME_DATE_EDIT_SHOW_TIME|GNOME_DATE_EDIT_24_HR</property>
+				  <property name="lower_hour">7</property>
+				  <property name="upper_hour">19</property>
 				</widget>
+				<packing>
+				  <property name="padding">0</property>
+				  <property name="expand">True</property>
+				  <property name="fill">True</property>
+				</packing>
 			      </child>
 			    </widget>
 			    <packing>
@@ -1350,9 +1378,10 @@ additional accounts by hand later.</property>
 			    <widget class="GtkTreeView" id="account_types_tree_view">
 			      <property name="visible">True</property>
 			      <property name="can_focus">True</property>
+			      <property name="headers_visible">True</property>
+			      <property name="rules_hint">False</property>
 			      <property name="reorderable">False</property>
-			      <property name="enable-search">False</property>
-			      <property name="headers-visible">True</property>
+			      <property name="enable_search">True</property>
 			    </widget>
 			  </child>
 			</widget>
@@ -1508,10 +1537,10 @@ additional accounts by hand later.</property>
 			  <child>
 			    <widget class="GtkTreeView" id="account_type_tree">
 			      <property name="visible">True</property>
+			      <property name="headers_visible">False</property>
 			      <property name="rules_hint">False</property>
 			      <property name="reorderable">False</property>
 			      <property name="enable_search">False</property>
-			      <property name="headers_visible">False</property>
 			    </widget>
 			  </child>
 			</widget>
@@ -1609,10 +1638,10 @@ and placeholder accounts may have an opening balance.</property>
 			<widget class="GtkTreeView" id="final_account_tree_view">
 			  <property name="visible">True</property>
 			  <property name="can_focus">True</property>
-			  <property name="reorderable">False</property>
-			  <property name="enable-search">False</property>
-			  <property name="headers-visible">True</property>
+			  <property name="headers_visible">True</property>
 			  <property name="rules_hint">True</property>
+			  <property name="reorderable">False</property>
+			  <property name="enable_search">True</property>
 			</widget>
 		      </child>
 		    </widget>
@@ -1794,7 +1823,27 @@ Press `Cancel' to close this dialog without creating any new accounts.</property
 		    <widget class="GtkCTree" id="account_tree">
 		      <property name="visible">True</property>
 		      <property name="can_focus">True</property>
-		      <property name="reorderable">False</property>
+		      <property name="n_columns">1</property>
+		      <property name="column_widths">80</property>
+		      <property name="selection_mode">GTK_SELECTION_SINGLE</property>
+		      <property name="show_titles">False</property>
+		      <property name="shadow_type">GTK_SHADOW_IN</property>
+
+		      <child>
+			<widget class="GtkLabel" id="label8477402">
+			  <property name="visible">True</property>
+			  <property name="label" translatable="yes"></property>
+			  <property name="use_underline">False</property>
+			  <property name="use_markup">False</property>
+			  <property name="justify">GTK_JUSTIFY_LEFT</property>
+			  <property name="wrap">False</property>
+			  <property name="selectable">False</property>
+			  <property name="xalign">0.5</property>
+			  <property name="yalign">0.5</property>
+			  <property name="xpad">0</property>
+			  <property name="ypad">0</property>
+			</widget>
+		      </child>
 		    </widget>
 		  </child>
 		</widget>
