--- a/src/gnome/glade/print.glade
+++ b/src/gnome/glade/print.glade
@@ -2,6 +2,7 @@
 <!DOCTYPE glade-interface SYSTEM "http://glade.gnome.org/glade-2.0.dtd">
 
 <glade-interface>
+<requires lib="gnome"/>
 
 <widget class="GtkDialog" id="Print Check Dialog">
   <property name="visible">True</property>
