--- a/src/gnome-search/search.glade
+++ b/src/gnome-search/search.glade
@@ -2,6 +2,7 @@
 <!DOCTYPE glade-interface SYSTEM "http://glade.gnome.org/glade-2.0.dtd">
 
 <glade-interface>
+<requires lib="gnome"/>
 
 <widget class="GtkDialog" id="Search Dialog">
   <property name="title" translatable="yes">Search for...</property>
