--- a/src/gnome/glade/totd.glade
+++ b/src/gnome/glade/totd.glade
@@ -2,6 +2,7 @@
 <!DOCTYPE glade-interface SYSTEM "http://glade.gnome.org/glade-2.0.dtd">
 
 <glade-interface>
+<requires lib="gnome"/>
 
 <widget class="GtkWindow" id="placeholder_window">
   <property name="visible">True</property>
@@ -74,23 +75,23 @@
 	      </child>
 
 	      <child>
-		    <widget class="GtkTextView" id="tip_textview">
-		      <property name="border_width">6</property>
-		      <property name="visible">True</property>
-		      <property name="can_focus">True</property>
-		      <property name="editable">False</property>
-		      <property name="justification">GTK_JUSTIFY_LEFT</property>
-		      <property name="wrap_mode">GTK_WRAP_WORD</property>
-		      <property name="cursor_visible">False</property>
-		      <property name="pixels_above_lines">0</property>
-		      <property name="pixels_below_lines">0</property>
-		      <property name="pixels_inside_wrap">0</property>
-		      <property name="left_margin">0</property>
-		      <property name="right_margin">0</property>
-		      <property name="indent">0</property>
-		      <property name="text" translatable="yes">Warning This is a DEVELOPMENT version of GnuCash. It probably has lots of bugs and unstable features!
+		<widget class="GtkTextView" id="tip_textview">
+		  <property name="border_width">6</property>
+		  <property name="visible">True</property>
+		  <property name="can_focus">True</property>
+		  <property name="editable">False</property>
+		  <property name="justification">GTK_JUSTIFY_LEFT</property>
+		  <property name="wrap_mode">GTK_WRAP_WORD</property>
+		  <property name="cursor_visible">False</property>
+		  <property name="pixels_above_lines">0</property>
+		  <property name="pixels_below_lines">0</property>
+		  <property name="pixels_inside_wrap">0</property>
+		  <property name="left_margin">0</property>
+		  <property name="right_margin">0</property>
+		  <property name="indent">0</property>
+		  <property name="text" translatable="yes">Warning This is a DEVELOPMENT version of GnuCash. It probably has lots of bugs and unstable features!
 If you are looking for a stable personal finance application, you should use the latest release of GnuCash 1.8</property>
-		    </widget>
+		</widget>
 		<packing>
 		  <property name="padding">0</property>
 		  <property name="expand">True</property>
